# ipythonng

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
ipythonng/: __init__.py  cli.py  extension.py
tests/: conftest.py  test_ipythonng.py
