[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ipythonng"
dynamic = ["version"]
description = "IPython extension for terminal markdown, kitty images, and richer output history"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ipython>=9.0",
    "kittytgp>=0.0.2",
    "rich>=13.0",
]

[project.scripts]
ipythonng = "ipythonng.cli:main"

[tool.setuptools]
package-dir = {"" = "."}
include-package-data = true

[tool.setuptools.dynamic]
version = { attr = "ipythonng.__version__" }

[tool.setuptools.packages.find]
include = ["ipythonng*"]
